Changelog
=========

2.1.1 (unreleased)
------------------

- Customize formlib sequencewidget in order to add originalValue attribute.
  We need it to enable form unload protection for list fields on Plone forms.
  [vipod]

2.1 (2012-05-25)
----------------

- Remove hard-coded required markers. Replaced by CSS in Plone 4.2.x.
  [smcmahon]

- Depend on zope.formlib rather than zope.app.form.
  [davisagli]

2.0.5 (2012-01-26)
------------------

- Fix the CheckBoxWidget to work properly with required fields and
  return an error that was previously squashed. Added missing unit tests
  for widget. This should also fix #11449. [rochecompaan]

2.0.4 - 2011-10-06
------------------

- Added support for readonly, addonly and removeonly to multi USW.
  Warning! Readonly is implemented in code, but addonly and removeonly is
  only done in the UI!
  [fschulze, tesdal]

- Added overrides for IPageForm and ISubPageForm as the monkeypatch
  breaks compatibility with five.formlib without restoring it in
  any other way if we don't import from plone.app.form.
  [tesdal]

2.0.3 - 2011-07-13
------------------

- Made (more) compatible with chameleon by using a simpler way to get
  the wysiwyg editor.
  [maurits]

- Add MANIFEST.in.
  [WouterVH]


2.0.2 - 2011-02-04
------------------

- Stop stripping GMT when passed to widget display and replace dates
  that have "-" with "/" so the proper timezone is applied. See #11423
  [eleddy]

- Fix edge case of dates that are greater than the last minute interval.
  Now rounding down to last interval instead of returning "--".
  [eleddy]


2.0.1 - 2011-01-03
------------------

- Use the FileUploadWidget from CMFDefault as the default widget for the
  FileUpload field from the same package (this was lost when CMFPlone
  started excluding CMFDefault's ZCML.)
  [davisagli]


2.0 - 2010-07-18
----------------

- Update license to GPL version 2 only.
  [hannosch]


2.0b6 - 2010-06-13
------------------
