@@ -8,6 +8,10 @@ Changelog
   We need it to enable form unload protection for list fields on Plone forms.
   [vipod]
 
+- Fix handling of timezones for dates before 1970 on platforms where
+  time.localtime cannot handle negative values (such as Windows).
+  [mj]
+
 2.1 (2012-05-25)
 ----------------
 
